--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
         </div>
         <div class="col-lg-4">
           <img src="fri2.png" class="img-fluid mb-3" alt="">
-          <h5>The Best Takoyaki</h5>
-          <p>Not your ordinary takoyaki toasted with best cheese filling inside.</p>
+          <h5>Tasty Fried Noodle w/Siomai</h5>
+          <p>Not your ordinary fried noodles with toppins such as siomai, gyoza etc</p>
 
         </div>
         <div class="col-lg-4">
           <img src="smoothie.png" class="img-fluid mb-3" alt="">
-          <h5>The Best Takoyaki</h5>
-          <p>Not your ordinary takoyaki toasted with best cheese filling inside.</p>
+          <h5>Healthy Smothie</h5>
+          <p>Healthy smoothies Blend with Real Fruits</p>
 
         </div>
 
