--- a/trending.html
+++ b/trending.html
@@ -221,7 +221,7 @@
     <div class="container">
         <div class="text-center">
            
-            <h1 class="mb-5">Nothing Beat The Original Swakoyaki</h1>
+            <h1 class="mb-5"> The Original Pinoy Swakoyaki</h1>
         </div>
     </div>
 
